Bug 72537 - ODF: invalid element written <number:fill-character>
Summary: ODF: invalid element written <number:fill-character>
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: odf_validation target:4.3.0 target:4....
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-09 20:02 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2013-12-10 15:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2013-12-09 20:02:01 UTC
Number formats using the "*x" syntax are written using a yet to be defined <number:fill-character> element. This should use an extension namespace instead.
Comment 1 Commit Notification 2013-12-09 20:29:52 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9f87de91cee05656808a98ab1bd65ad9509ef7df

resolved fdo#72537 write <loext:fill-character>



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2013-12-09 20:33:14 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e06569ab7f137e0c5173bd70231c856cb67badac&h=libreoffice-4-2

resolved fdo#72537 write <loext:fill-character>


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Eike Rathke (retired, only occasionally showing up) 2013-12-09 21:25:26 UTC
Review pending
for 4-1 at https://gerrit.libreoffice.org/7013
for 4-1-4 at https://gerrit.libreoffice.org/7014
Comment 4 Commit Notification 2013-12-10 04:24:50 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8d7f6a429f66cf9d029cdd70bbf24906509900e2&h=libreoffice-4-1-4

resolved fdo#72537 write <loext:fill-character>


It will be available already in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-12-10 15:04:35 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=557aee6efee258d632ee4f4eed31365591ab3319&h=libreoffice-4-1

resolved fdo#72537 write <loext:fill-character>


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.